src/snapshots/ruff__linter__tests__d205.snap
---
source: src/linter.rs
expression: checks
---
- kind: BlankLineAfterSummary
  location:
    row: 195
    column: 6
  end_location:
    row: 198
    column: 8
  fix: ~
- kind: BlankLineAfterSummary
  location:
    row: 205
    column: 6
  end_location:
    row: 210
    column: 8
  fix: ~

