src/snapshots/ruff__linter__tests__d209.snap
---
source: src/linter.rs
expression: checks
---
- kind: NewLineAfterLastParagraph
  location:
    row: 276
    column: 6
  end_location:
    row: 278
    column: 20
  fix: ~

