src/snapshots/ruff__linter__tests__d211.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    NoBlankLineBeforeClass: 1
  location:
    row: 165
    column: 5
  end_location:
    row: 165
    column: 30
  fix: ~
- kind:
    NoBlankLineBeforeClass: 1
  location:
    row: 176
    column: 5
  end_location:
    row: 176
    column: 25
  fix: ~

