src/snapshots/ruff__linter__tests__d400.snap
---
source: src/linter.rs
expression: checks
---
- kind: DocstringEndsInNonPeriod
  location:
    row: 9
    column: 6
  end_location:
    row: 12
    column: 8
  fix: ~
- kind: DocstringEndsInNonPeriod
  location:
    row: 16
    column: 6
  end_location:
    row: 19
    column: 8
  fix: ~

