src/snapshots/ruff__linter__tests__d402.snap
---
source: src/linter.rs
expression: checks
---
- kind: NoSignature
  location:
    row: 373
    column: 5
  end_location:
    row: 373
    column: 31
  fix: ~

