src/snapshots/ruff__linter__tests__d410.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    BlankLineAfterSection: Returns
  location:
    row: 67
    column: 5
  end_location:
    row: 78
    column: 8
  fix: ~
- kind:
    BlankLineAfterSection: Returns
  location:
    row: 207
    column: 5
  end_location:
    row: 221
    column: 8
  fix: ~

