src/snapshots/ruff__linter__tests__d412.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    NoBlankLinesBetweenHeaderAndContent: Short summary
  location:
    row: 207
    column: 5
  end_location:
    row: 221
    column: 8
  fix: ~

