src/snapshots/ruff__linter__tests__d414.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    NonEmptySection: Returns
  location:
    row: 54
    column: 5
  end_location:
    row: 58
    column: 8
  fix: ~
- kind:
    NonEmptySection: Returns
  location:
    row: 67
    column: 5
  end_location:
    row: 78
    column: 8
  fix: ~
- kind:
    NonEmptySection: Yields
  location:
    row: 67
    column: 5
  end_location:
    row: 78
    column: 8
  fix: ~
- kind:
    NonEmptySection: Returns
  location:
    row: 161
    column: 5
  end_location:
    row: 165
    column: 8
  fix: ~
- kind:
    NonEmptySection: Returns
  location:
    row: 252
    column: 5
  end_location:
    row: 262
    column: 8
  fix: ~

