src/snapshots/ruff__linter__tests__d415.snap
---
source: src/linter.rs
expression: checks
---
- kind: DocstringEndsInNonPunctuation
  location:
    row: 69
    column: 5
  end_location:
    row: 69
    column: 12
  fix: ~
- kind: DocstringEndsInNonPunctuation
  location:
    row: 124
    column: 5
  end_location:
    row: 126
    column: 8
  fix: ~
- kind: DocstringEndsInNonPunctuation
  location:
    row: 283
    column: 5
  end_location:
    row: 283
    column: 34
  fix: ~
- kind: DocstringEndsInNonPunctuation
  location:
    row: 288
    column: 5
  end_location:
    row: 288
    column: 38
  fix: ~
- kind: DocstringEndsInNonPunctuation
  location:
    row: 350
    column: 5
  end_location:
    row: 350
    column: 18
  fix: ~
- kind: DocstringEndsInNonPunctuation
  location:
    row: 401
    column: 25
  end_location:
    row: 401
    column: 40
  fix: ~
- kind: DocstringEndsInNonPunctuation
  location:
    row: 405
    column: 5
  end_location:
    row: 405
    column: 25
  fix: ~
- kind: DocstringEndsInNonPunctuation
  location:
    row: 411
    column: 5
  end_location:
    row: 411
    column: 25
  fix: ~
- kind: DocstringEndsInNonPunctuation
  location:
    row: 417
    column: 35
  end_location:
    row: 417
    column: 50
  fix: ~
- kind: DocstringEndsInNonPunctuation
  location:
    row: 424
    column: 49
  end_location:
    row: 424
    column: 64
  fix: ~
- kind: DocstringEndsInNonPunctuation
  location:
    row: 465
    column: 5
  end_location:
    row: 465
    column: 25
  fix: ~
- kind: DocstringEndsInNonPunctuation
  location:
    row: 470
    column: 5
  end_location:
    row: 470
    column: 25
  fix: ~
- kind: DocstringEndsInNonPunctuation
  location:
    row: 475
    column: 5
  end_location:
    row: 475
    column: 25
  fix: ~
- kind: DocstringEndsInNonPunctuation
  location:
    row: 482
    column: 5
  end_location:
    row: 482
    column: 25
  fix: ~
- kind: DocstringEndsInNonPunctuation
  location:
    row: 504
    column: 5
  end_location:
    row: 504
    column: 35
  fix: ~
- kind: DocstringEndsInNonPunctuation
  location:
    row: 515
    column: 5
  end_location:
    row: 515
    column: 33
  fix: ~

